# MBU_SD-Lon

./: .gitignore  README.md  flow.excalidraw  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check_version_number.yml
robot_framework/: config.py  initialize.py  process.py  queue_framework.py
robot_framework/sql_scripts/: kvalitetskontroller.py
robot_framework/subprocesses/: helper_functions.py  workers.py
robot_framework/worker_data/: KV2_data.py
