[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SDLon"
version = "0.0.3"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow",
    "itk-dev-shared-components",
    "mbu-dev-shared-components",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
